tests/expression/list_type_faults.sy
start :: fn {
    a := [1, 2]
    push(a, "str")

    b : [str] = [1, "str"]
    b

    c := [1, "str"]
    push(c, 0.1)
}

// error: #TypeMismatch(Type::Int, Type::String)
// error: #TypeMismatch(Type::List(_), Type::List(_))
// error: #TypeMismatch(_, Type::Float)
